# FloraUML

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  design.md
cli/: Cargo.toml
dot_gen/: Cargo.toml
dot_gen/src/: lib.rs
dot_gen/src/graph/: graph_walk.rs  labeller.rs  mod.rs
model/: Cargo.toml
model/src/: lib.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parser.rs
parser/src/class/: parser.rs
src/: error.rs  lib.rs  main.rs
syntax/: Cargo.toml
syntax/src/: class.rs  declaration.rs  lib.rs
syntax_to_model/: Cargo.toml
syntax_to_model/src/: lib.rs
tests/: classes.rs  parse_error.rs  write_error.rs
