[package]
name = "flora"
version = "0.1.0"
authors = ["Tim Seckinger <seckinger.tim@gmail.com>"]
edition = "2018"

[dependencies]
flora_model = { path = "./model" }
flora_parser = { path = "./parser" }
flora_dot_gen = { path = "./dot_gen" }
flora_syntax = { path = "./syntax" }
flora_syntax_to_model = { path = "./syntax_to_model" }

[workspace]
members = [
  "dot_gen",
  "model",
  "parser",
  "syntax",
  "syntax_to_model",
]
